--- a/Angular2-Tutorial/03_Databinding/end/app/myFirstComponent/myfirst.component.html
+++ b/Angular2-Tutorial/03_Databinding/end/app/myFirstComponent/myfirst.component.html
@@ -15,3 +15,8 @@
 <h2>From Template to Component</h2>
 
 <button (click)="buttonClicked($event)">Click me</button>
+
+<h1>Pipes</h1>
+
+<h2>{{upperCaseString | toLowerCase}}</h2>
+<h2>{{birthday|date:'shortDate'}}</h2>
