Added ChildRoutes to Demo App

--- a/ASPNET-Demo-A1-A2/Angular2-Client/app/components/mainFood/mainFood.component.html
+++ b/ASPNET-Demo-A1-A2/Angular2-Client/app/components/mainFood/mainFood.component.html
@@ -3,6 +3,7 @@
         <foodForm-component [foodItem]="foodSelectedFromList"></foodForm-component>
         <br/>
         <foodList-component [foods]="foods" (currentlySelectedFood)="setCurrentlySelectedFood($event)"></foodList-component>
+         <router-outlet></router-outlet>
     </div>
 </div>
 <!-- /.container -->
