--- a/ASPNET-Demo-A1-A2/Angular2-Client/app/components/foodList/foodList.component.html
+++ b/ASPNET-Demo-A1-A2/Angular2-Client/app/components/foodList/foodList.component.html
@@ -14,7 +14,7 @@
         <td class="text-right">
             <button (click)="deleteFood(food)" class="btn btn-primary btn-xs"><span class="glyphicon glyphicon-trash"></span> Delete</button>
             <button (click)="setFoodItemForEdit(food)" class="btn btn-primary btn-xs"><span class="glyphicon glyphicon-edit"></span> Edit</button>
-            <a [routerLink]="['/FoodDetails', {foodId: food.Id}]" class="btn btn-primary btn-xs"><span class="glyphicon glyphicon-search"></span> Details</a>
+            <a [routerLink]="['FoodDetail', {foodId: food.Id}]" class="btn btn-primary btn-xs"><span class="glyphicon glyphicon-search"></span> Details</a>
         </td>
     </tr>
 </table>
