--- a/ASPNET-Demo-A1-A2/Angular1-Client/app/components/home/home/home.template.html
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/app/components/home/home/home.template.html
@@ -1,23 +1,18 @@
-﻿<div ng-include="'app/shared/navigation.html'"></div>
+<div ng-include="'app/shared/navigation.html'"></div>
 
 <div class="container">
     <div class="starter-template">
-        <!-- Page Content -->
         <div class="row">
             <div class="centered">
 
             </div>
-            <!-- /.row -->
         </div>
-        <!-- /.container -->
     </div>
 
 </div>
-<!-- /.container -->
 
 <div class="container">
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron starter-template">
+   <div class="jumbotron starter-template">
         <h1>Random Food:</h1>
         <p>
             <h2 ng-show="!vm.selectedFood">Getting your food suggestions<br />Please wait...</h2>
