--- a/ASPNET-Demo-A1-A2/Angular1-Client/app/components/shared/navigation/navigation.template.html
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/app/components/shared/navigation/navigation.template.html
@@ -7,12 +7,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/">AngularJsDemoApp</a>
+            <a class="navbar-brand" ui-sref="home">AngularJsDemoApp</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#/">Home</a></li>
-                <li><a href="#/food">Food</a></li>
+                <li><a ui-sref="home">Home</a></li>
+                <li><a ui-sref="food-overview">Food</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
