--- a/ASPNET-Demo-A1-A2/Angular1-Client/app/components/home/home/home.template.html
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/app/components/home/home/home.template.html
@@ -1,15 +1,10 @@
-<!--<div ng-include="'app/shared/navigation.html'"></div>-->
+<div class="jumbotron starter-template">
+    <h1>Random Food:</h1>
+    <p>
+        <h2 ng-if="!$ctrl.selectedFood">Getting your food suggestions<br />Please wait...</h2>
+        <h2 ng-if="$ctrl.selectedFood">{{$ctrl.selectedFood.Name}}<br/>{{$ctrl.selectedFood.Calories}}</h2>
 
-
-<div class="container">
-   <div class="jumbotron starter-template">
-        <h1>Random Food:</h1>
-        <p>
-            <h2 ng-show="!$ctrl.selectedFood">Getting your food suggestions<br />Please wait...</h2>
-            <h2 ng-show="$ctrl.selectedFood">{{$ctrl.selectedFood.Name}}<br/>{{$ctrl.selectedFood.Calories}}</h2>
-            
-            <h3 ng-show="$ctrl.selectedFood">{{$ctrl.lastUpdatedDate | date:'medium'}}</h3>
-            <button type="button" class="btn btn-primary" data-ng-click="$ctrl.getFood()">Get new Food</button>
-        </p>
-    </div>
+        <h3 ng-if="$ctrl.selectedFood">{{$ctrl.lastUpdatedDate | date:'medium'}}</h3>
+        <button type="button" class="btn btn-primary" data-ng-click="$ctrl.getFood()">Get new Food</button>
+    </p>
 </div>
