--- a/ASPNET-Demo-A1-A2/Angular1-Client/app/components/shared/navigation/navigation.template.html
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/app/components/shared/navigation/navigation.template.html
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a ui-sref="home">Home</a></li>
-                <li><a ui-sref="food-overview">Food</a></li>
+                <li><a ui-sref="foods">Food</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
