--- a/ASPNET-Demo-A1-A2/Angular1-Client/app/components/food/foods/foods.template.html
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/app/components/food/foods/foods.template.html
@@ -1,6 +1,9 @@
 <div class="jumbotron">
-    <foodform on-add="$ctrl.foodAdded($event);"></foodform>
+    <foodform on-add="$ctrl.foodAdded($event);"
+    on-update="$ctrl.foodUpdated($event);"
+    food="$ctrl.foodToEdit"></foodform>
     <br/><br/>
     <foodlist foods="$ctrl.foods" 
-    on-delete="$ctrl.foodDeleted($event)"></foodlist>
+    on-delete="$ctrl.foodDeleted($event)"
+    on-edit="$ctrl.setFoodItemForEdit($event)"></foodlist>
 </div>
