--- a/ASPNET-Demo-A1-A2/Angular1-Client/app/components/food/food-detail/food-detail.template.html
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/app/components/food/food-detail/food-detail.template.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
     <food food="$ctrl.food"></food>
 
-    <a ng-href="#/food" class="btn btn-primary btn-xs"> back to Food</a>
+    <a ui-sref="foods" class="btn btn-primary btn-xs"> back to Food</a>
 </div>
