--- a/ASPNET-Demo-A1-A2/Angular1-Client/app/components/food/food/food.template.html
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/app/components/food/food/food.template.html
@@ -2,25 +2,25 @@
         <div class="form-group">
             <label class="col-sm-2 control-label">Id</label>
             <div class="col-sm-10">
-                <p class="form-control-static">{{$ctrl.food.Id}}</p>
+                <p class="form-control-static">{{::$ctrl.food.Id}}</p>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Name</label>
             <div class="col-sm-10">
-                <p class="form-control-static">{{vm.foodItem.Name}}</p>
+                <p class="form-control-static">{{::$ctrl.food.Name}}</p>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Calories</label>
             <div class="col-sm-10">
-                <p class="form-control-static">{{vm.foodItem.Calories}}</p>
+                <p class="form-control-static">{{::$ctrl.food.Calories}}</p>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Created</label>
             <div class="col-sm-10">
-                <p class="form-control-static">{{vm.foodItem.Created}}</p>
+                <p class="form-control-static">{{::$ctrl.food.Created}}</p>
             </div>
         </div>
     </form>
