added loadingbar and toastr

--- a/ASPNET-Demo-A1-A2/Angular1-Client/app/components/food/food/food.template.html
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/app/components/food/food/food.template.html
@@ -20,7 +20,7 @@
         <div class="form-group">
             <label class="col-sm-2 control-label">Created</label>
             <div class="col-sm-10">
-                <p class="form-control-static">{{::$ctrl.food.Created}}</p>
+                <p class="form-control-static">{{::$ctrl.food.Created | date:'medium'}}</p>
             </div>
         </div>
     </form>
