--- a/ASPNET-Demo-A1-A2/Angular1-Client/app/components/food/food-list/food-list.template.html
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/app/components/food/food-list/food-list.template.html
@@ -1,7 +1,11 @@
 <table class="table">
     <tr>
-        <th><a href="" data-ng-click="sortType = 'Name'; sortReverse=!sortReverse">Name</a></th>
-        <th><a href="" data-ng-click="sortType = 'Calories'; sortReverse=!sortReverse">Calories</a></th>
+        <th>
+            <a href="" data-ng-click="sortType = 'Name'; sortReverse=!sortReverse">Name</a>
+        </th>
+        <th>
+            <a href="" data-ng-click="sortType = 'Calories'; sortReverse=!sortReverse">Calories</a>
+        </th>
         <th class="text-right">Actions</th>
     </tr>
 
