--- a/ASPNET-Demo-A1-A2/Angular1-Client/app/components/food/food-form/food-form.template.html
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/app/components/food/food-form/food-form.template.html
@@ -1,15 +1,5 @@
-<div class="alert alert-success alert-dismissible" ng-show="$ctrl.success">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <strong>Success!</strong> Indicates a successful or positive action.
-</div>
-
 <div class="alert alert-info alert-dismissible" ng-show="$ctrl.inProgress">
     <strong>Info!</strong> Working...
-</div>
-
-<div class="alert alert-danger alert-dismissible" ng-show="$ctrl.error">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <strong>Danger!</strong> Indicates a dangerous or potentially negative action.
 </div>
 
 <form data-ng-submit="$ctrl.saveFood()">
@@ -21,5 +11,5 @@
         <label for="exampleInputEmail1">Calories</label>
         <input type="number" class="form-control" id="exampleInputEmail1" placeholder="Calories" ng-model="$ctrl.food.Calories">
     </div>
-    <button type="submit" class="btn btn-default">Submit</button>
+    <button type="submit" class="btn btn-success">Submit</button>
 </form>
