--- a/ASPNET-Demo-A1-A2/Angular1-Client/app/components/food/food-list/food-list.template.html
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/app/components/food/food-list/food-list.template.html
@@ -1,3 +1,13 @@
+<form>
+    <div class="form-group">
+      <div class="input-group">
+        <div class="input-group-addon"><i class="glyphicon glyphicon-search"></i></div>
+        <input type="text" class="form-control" placeholder="Type to search..." ng-model="$ctrl.searchPattern">
+      </div>      
+    </div>
+  </form>
+
+
 <table class="table">
     <tr>
         <th>
@@ -9,7 +19,7 @@
         <th class="text-right">Actions</th>
     </tr>
 
-    <tr data-ng-repeat="food in $ctrl.foods | orderBy:sortType:sortReverse track by $index">
+    <tr data-ng-repeat="food in $ctrl.foods | orderBy:sortType:sortReverse | filter:$ctrl.searchPattern track by $index">
         <td class="text-left">
             {{food.Name}}
         </td>
