--- a/ASPNET-Demo-A1-A2/Angular1-Client/css/custom.css
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/css/custom.css
@@ -3,6 +3,10 @@ body {
   padding-bottom: 30px;
 }
         
-        .starter-template {
-            text-align: center;
-        }
+.starter-template {
+    text-align: center;
+}
+
+#loading-bar .bar {
+  background: whitesmoke;
+}
