--- a/ASPNET-Demo-A1-A2/Angular1-Client/app/components/food/food-form/food-form.template.html
+++ b/ASPNET-Demo-A1-A2/Angular1-Client/app/components/food/food-form/food-form.template.html
@@ -1,15 +1,11 @@
-<div class="alert alert-info alert-dismissible" ng-show="$ctrl.inProgress">
-    <strong>Info!</strong> Working...
-</div>
-
-<form data-ng-submit="$ctrl.saveFood()">
+<form data-ng-submit="$ctrl.saveFood()" name="foodForm">
     <div class="form-group">
         <label for="exampleInputEmail1">Name</label>
-        <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Foodname" ng-model="$ctrl.food.Name">
+        <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Foodname" ng-model="$ctrl.food.Name" required ng-minlength="3">
     </div>
     <div class="form-group">
         <label for="exampleInputEmail1">Calories</label>
-        <input type="number" class="form-control" id="exampleInputEmail1" placeholder="Calories" ng-model="$ctrl.food.Calories">
+        <input type="number" class="form-control" id="exampleInputEmail1" placeholder="Calories" ng-model="$ctrl.food.Calories" required>
     </div>
-    <button type="submit" class="btn btn-success">Submit</button>
+    <button type="submit" class="btn btn-success" ng-disabled="foodForm.$invalid">Submit</button>
 </form>
