--- a/ASPNET-Demo-A1-A2/Angular2-Client/app/components/foodDetails/foodDetails.component.html
+++ b/ASPNET-Demo-A1-A2/Angular2-Client/app/components/foodDetails/foodDetails.component.html
@@ -27,6 +27,6 @@
             </div>
         </form>
 
-<a [routerLink]="['/Food']" class="btn btn-primary btn-xs"> back to Food</a>
+<a [routerLink]="['/food']" class="btn btn-primary btn-xs"> back to Food</a>
     </div>
 </div>
