--- a/ASPNET-Demo-A1-A2/Angular2-Client/app/components/foodForm/foodForm.component.html
+++ b/ASPNET-Demo-A1-A2/Angular2-Client/app/components/foodForm/foodForm.component.html
@@ -1,29 +1,34 @@
 <form #f="ngForm">
 
     <div class="form-group">
-        <label for="exampleInputEmail1">Name</label>
-        <input type="text" name="foodItemName" class="form-control" id="exampleInputEmail1" ngControl="foodName" placeholder="Foodname" [(ngModel)]="foodItem.Name"
-        required>
-        <div *ngIf="f?.controls?.foodName?.hasError('required') && !f?.controls?.foodName?.pending && f?.controls?.foodName?.touched">
+        <label for="foodName">Name</label>
+        <input type="text" name="foodName" class="form-control" id="foodName" placeholder="Foodname"
+            [(ngModel)]="foodItem.Name" required #foodName="ngModel">
+
+        <div *ngIf="f?.controls?.foodName?.hasError('required') && f?.controls?.foodName?.dirty" class="alert alert-danger">
             Pflichtfeld!
         </div>
     </div>
     <div class="form-group">
-        <label for="exampleInputEmail1">Calories</label>
-        <input type="number" class="form-control" id="exampleInputEmail1" ngControl="calories" placeholder="Calories" [(ngModel)]="foodItem.Calories"
-        required isNumber isInRange name="foodItemCalories">
-        <div *ngIf="f?.controls?.calories?.hasError('required') && f?.controls?.calories?.touched">
+        <label for="calories">Calories</label>
+        <input type="text" class="form-control" id="calories" placeholder="Calories" [(ngModel)]="foodItem.Calories"
+            required isNumber isInRange name="calories" #calories="ngModel">
+        
+        <div *ngIf="f?.controls?.calories?.hasError('required') && f?.controls?.calories?.dirty" class="alert alert-danger">
             Pflichtfeld!
         </div>
 
-        <div *ngIf="f?.controls?.calories?.hasError('isInRange') && f?.controls?.calories?.touched">
+        <div *ngIf="f?.controls?.calories?.hasError('isNumber') && f?.controls?.calories?.dirty" class="alert alert-danger">
+            Bitte gib eine Nummer ein
+        </div>
+
+        <div *ngIf="f?.controls?.calories?.hasError('isInRange') && f?.controls?.calories?.dirty" class="alert alert-danger">
             Bitte gib eine Nummer im Integer-Bereich ein
         </div>
 
-        <div *ngIf="f?.controls?.calories?.hasError('isNumber') && f?.controls?.calories?.touched">
-            Bitte gib eine valide Nummer ein
-        </div>
-
+        <!--<div *ngIf="calories.errors?.isNumber != null">
+            Bitte gib eine Nummer im Integer-Bereich ein 222
+        </div>-->
     </div>
     <button type="button" class="btn btn-default" (click)="AddOrUpdateFood()" [disabled]="!f?.valid">Submit</button>
 </form>
