--- a/Angular2-Tutorial/02_Direktiven/end/app/app.component.html
+++ b/Angular2-Tutorial/02_Direktiven/end/app/app.component.html
@@ -4,10 +4,23 @@
 <div class="container">
 
     <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead" myHighlight>Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones
-            HTML document.</p>
+        <h1 [ngStyle]="{ 
+            color: 'red', 
+            'font-weight': 'bold' }">
+            Using directives</h1>
+
+        <p class="lead" myHighlight>
+            Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones
+            HTML document.
+        </p>
+
     </div>
+
+    <ul>
+        <li *ngFor="let item of items;">{{item}}</li>
+    </ul>
+
+    <p *ngIf="showItem">ShowMe</p>
 
 </div>
 <!-- /.container -->
