--- a/Angular2-Tutorial/03_Lifecycle/end/app/app.component.html
+++ b/Angular2-Tutorial/03_Lifecycle/end/app/app.component.html
@@ -1,3 +1,9 @@
 <navigation></navigation>
 
-<home></home>
+<home [textForOnChanges]="valueToSet"></home>
+
+<div class="container">
+
+    <input [(ngModel)]="valueToSet" />
+
+</div>
