going further with chapters and refactored css folder

--- a/Angular2-Tutorial/02_Direktiven/end/app/app.component.html
+++ b/Angular2-Tutorial/02_Direktiven/end/app/app.component.html
@@ -22,5 +22,7 @@
 
     <p *ngIf="showItem">ShowMe</p>
 
+    <button (click)="toggleShowItem()">Toggle NgIf</button>
+
 </div>
 <!-- /.container -->
