--- a/Angular2-Tutorial/04_Services/end/app/app.component.html
+++ b/Angular2-Tutorial/04_Services/end/app/app.component.html
@@ -4,8 +4,9 @@
 <div class="container">
 
     <div class="starter-template">
-        <h1>Directives</h1>
-        <p class="lead">Creating Directives...</p>
+        <h1>Services</h1>
+
+        <h2>Result from Service: {{result}}</h2>
     </div>
 
 </div>
