--- a/Angular2-Tutorial/04_Services/start/app/components/navigation/navigation.component.html
+++ b/Angular2-Tutorial/04_Services/start/app/components/navigation/navigation.component.html
@@ -3,12 +3,12 @@
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
             aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
+                <span class="sr-only">Services</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Directives</a>
+            <a class="navbar-brand" href="#">Services</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
