--- a/Angular2-Tutorial/03_Lifecycle/end/app/components/home/home.component.html
+++ b/Angular2-Tutorial/03_Lifecycle/end/app/components/home/home.component.html
@@ -2,8 +2,7 @@
 
     <div class="starter-template">
         <h1>Lifecycle Hooks</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones
-            HTML document.</p>
+        <p class="lead">Check the console...</p>
     </div>
 
 </div>
