--- a/Angular2-Tutorial/05_DependencyInjection/end/app/app.component.html
+++ b/Angular2-Tutorial/05_DependencyInjection/end/app/app.component.html
@@ -4,9 +4,11 @@
 <div class="container">
 
     <div class="starter-template">
-        <h1>Services</h1>
+        <h1>Services with DI</h1>
 
         <h2>Result from Service: {{result}}</h2>
+        <h2>Random: {{randomWithFactoryValue}}</h2>
+        <h2>Random: {{randomWithValue}}</h2>
     </div>
 
 </div>
