--- a/Angular2-Tutorial/05_DependencyInjection/start/app/app.component.html
+++ b/Angular2-Tutorial/05_DependencyInjection/start/app/app.component.html
@@ -4,7 +4,7 @@
 <div class="container">
 
     <div class="starter-template">
-        <h1>Services</h1>
+        <h1>Services with DI</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones
             HTML document.</p>
     </div>
