--- a/Angular2-Tutorial/04_Services/end/app/app.component.html
+++ b/Angular2-Tutorial/04_Services/end/app/app.component.html
@@ -7,7 +7,7 @@
         <h1>Services</h1>
 
         <h2>Result from Service: {{result}}</h2>
-        <h2>Result from Http: {{items?.length}} items</h2>
+        <h2>Result from Http: {{items ? items.length : 0}} item (s)</h2>
     </div>
 
 </div>
