--- a/Angular2-Tutorial/07_Forms/start/app/app.component.html
+++ b/Angular2-Tutorial/07_Forms/start/app/app.component.html
@@ -1,1 +1,13 @@
-<h1>Hello World</h1>
+<navigation></navigation>
+
+
+<div class="container">
+
+    <div class="starter-template">
+        <h1>Forms</h1>
+        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones
+            HTML document.</p>
+    </div>
+
+</div>
+<!-- /.container -->
