--- a/Angular2-Tutorial/09_Routing/start/app/app.component.html
+++ b/Angular2-Tutorial/09_Routing/start/app/app.component.html
@@ -1,1 +1,12 @@
-<h1>Hello World</h1>
+<navigation></navigation>
+
+
+<div class="container">
+
+    <div class="starter-template">
+        <h1>Routes</h1>
+        <p class="lead">Working with Routes</p>
+    </div>
+
+</div>
+<!-- /.container -->
